[gd_scene load_steps=2 format=3 uid="uid://d1aov81s42w7y"]

[ext_resource type="Script" path="res://main_menu.gd" id="1_hfx3x"]

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hfx3x")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Grid Margin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Menu Grid" type="GridContainer" parent="Grid Margin"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Title Margin" type="MarginContainer" parent="Grid Margin/Menu Grid"]
layout_mode = 2
tooltip_text = "Title"
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Title" type="Label" parent="Grid Margin/Menu Grid/Title Margin"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "Spectacle Card Game"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Start Game Margin" type="MarginContainer" parent="Grid Margin/Menu Grid" groups=["mm_button_margin"]]
layout_mode = 2
theme_override_constants/margin_top = 10
theme_override_constants/margin_bottom = 10

[node name="Start Game Button" type="Button" parent="Grid Margin/Menu Grid/Start Game Margin"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Start Game"

[node name="Dialogue Margin" type="MarginContainer" parent="Grid Margin/Menu Grid" groups=["mm_button_margin"]]
layout_mode = 2
theme_override_constants/margin_top = 10
theme_override_constants/margin_bottom = 10

[node name="Dialogue Button" type="Button" parent="Grid Margin/Menu Grid/Dialogue Margin"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Dialogue
"

[node name="Settings Margin" type="MarginContainer" parent="Grid Margin/Menu Grid" groups=["mm_button_margin"]]
layout_mode = 2
theme_override_constants/margin_top = 10
theme_override_constants/margin_bottom = 10

[node name="Settings Button" type="Button" parent="Grid Margin/Menu Grid/Settings Margin"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Settings"

[node name="Exit Margin" type="MarginContainer" parent="Grid Margin/Menu Grid" groups=["mm_button_margin"]]
layout_mode = 2
theme_override_constants/margin_top = 10
theme_override_constants/margin_bottom = 10

[node name="Exit Button" type="Button" parent="Grid Margin/Menu Grid/Exit Margin"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Exit"

[connection signal="pressed" from="Grid Margin/Menu Grid/Start Game Margin/Start Game Button" to="." method="_on_start_game_button_pressed"]
[connection signal="pressed" from="Grid Margin/Menu Grid/Dialogue Margin/Dialogue Button" to="." method="_on_dialogue_button_pressed"]
[connection signal="pressed" from="Grid Margin/Menu Grid/Settings Margin/Settings Button" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="Grid Margin/Menu Grid/Exit Margin/Exit Button" to="." method="_on_exit_button_pressed"]
